# TR1-Chat

./: .gitignore  CMakeLists.txt  README.md
db/: server
include/: client.h  console.h  server.h  settings.h
src/: SimpleClient.py  client.c  client.py  client.ui  client_main.py  client_ui.py  connect.py  connect.ui  connect_ui.py  database.py  mainwindow.py  mainwindow.ui  rooms.py  rooms.ui  rooms_ui.py  server.c  server.py  server.ui  server_main.py  server_ui.py  settings.c
